--- a/versions-manifest.json
+++ b/versions-manifest.json
@@ -3,6 +3,189 @@
     "files": [
       {
         "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-apple-darwin.tar.gz.crt",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz.crt",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-apple-darwin.tar.gz.rekor",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz.rekor",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-apple-darwin.tar.gz.sig",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz.sig",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-0.14.0b7-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.musllinux_1_1_x86_64.whl.crt",
+        "filename": "maturin-0.14.0b7-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.musllinux_1_1_x86_64.whl.crt",
+        "platform": "linux"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-0.14.0b7-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.musllinux_1_1_x86_64.whl.rekor",
+        "filename": "maturin-0.14.0b7-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.musllinux_1_1_x86_64.whl.rekor",
+        "platform": "linux"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-0.14.0b7-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.musllinux_1_1_x86_64.whl.sig",
+        "filename": "maturin-0.14.0b7-py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.musllinux_1_1_x86_64.whl.sig",
+        "platform": "linux"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz.crt",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz.crt",
+        "platform": "linux"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz.rekor",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz.rekor",
+        "platform": "linux"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-unknown-linux-musl.tar.gz.sig",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz.sig",
+        "platform": "linux"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-i686-pc-windows-msvc.zip.crt",
+        "filename": "maturin-i686-pc-windows-msvc.zip.crt",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-i686-pc-windows-msvc.zip.rekor",
+        "filename": "maturin-i686-pc-windows-msvc.zip.rekor",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-i686-pc-windows-msvc.zip.sig",
+        "filename": "maturin-i686-pc-windows-msvc.zip.sig",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-pc-windows-msvc.zip.crt",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip.crt",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-pc-windows-msvc.zip.rekor",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip.rekor",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.7/maturin-x86_64-pc-windows-msvc.zip.sig",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip.sig",
+        "platform": "win32"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.14.0-beta.7",
+    "stable": false,
+    "version": "0.14.0-beta.7"
+  },
+  {
+    "files": [
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.6/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.6/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.6/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.6/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.14.0-beta.6",
+    "stable": false,
+    "version": "0.14.0-beta.6"
+  },
+  {
+    "files": [
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.5/maturin-x86_64-apple-darwin.tar.gz",
+        "filename": "maturin-x86_64-apple-darwin.tar.gz",
+        "platform": "darwin"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.5/maturin-x86_64-unknown-linux-musl.tar.gz",
+        "filename": "maturin-x86_64-unknown-linux-musl.tar.gz",
+        "platform": "linux"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.5/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.5/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      }
+    ],
+    "release_url": "https://github.com/PyO3/maturin/releases/tag/v0.14.0-beta.5",
+    "stable": false,
+    "version": "0.14.0-beta.5"
+  },
+  {
+    "files": [
+      {
+        "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.14.0-beta.4/maturin-x86_64-apple-darwin.tar.gz",
         "filename": "maturin-x86_64-apple-darwin.tar.gz",
         "platform": "darwin"
@@ -1533,15 +1716,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x86",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.15/maturin-i686-pc-windows-msvc.zip",
-        "filename": "maturin-i686-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x64",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.15/maturin-x86_64-pc-windows-msvc.zip",
         "filename": "maturin-x86_64-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x86",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.12.15/maturin-i686-pc-windows-msvc.zip",
+        "filename": "maturin-i686-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4521,15 +4704,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x64",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0/maturin-x86_64-pc-windows-msvc.zip",
-        "filename": "maturin-x86_64-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x86",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0/maturin-i686-pc-windows-msvc.zip",
         "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
@@ -4583,15 +4766,15 @@
         "platform": "linux"
       },
       {
-        "arch": "x64",
-        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.5/maturin-x86_64-pc-windows-msvc.zip",
-        "filename": "maturin-x86_64-pc-windows-msvc.zip",
-        "platform": "win32"
-      },
-      {
         "arch": "x86",
         "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.5/maturin-i686-pc-windows-msvc.zip",
         "filename": "maturin-i686-pc-windows-msvc.zip",
+        "platform": "win32"
+      },
+      {
+        "arch": "x64",
+        "download_url": "https://github.com/PyO3/maturin/releases/download/v0.10.0-beta.5/maturin-x86_64-pc-windows-msvc.zip",
+        "filename": "maturin-x86_64-pc-windows-msvc.zip",
         "platform": "win32"
       }
     ],
